changed frontend messages
git-svn-id: svn+ssh://rubyforge.org/var/svn/ape/trunk@10 d43e647d-18ea-4ebb-b362-cbe88fbed885

--- a/lib/ape/layout/index.html
+++ b/lib/ape/layout/index.html
@@ -40,10 +40,7 @@
   -->
   <hr/>
   <p>The Ape source code may be found at 
-  <a href="http://ape.dev.java.net">ape.dev.java.net</a>.  It's a little
-  tricky to get going;
-  until I fix that, see this 
-  <a href="http://rollerweblogger.org/roller/entry/atom_protocol_exerciser_ape_setup">discussion by Dave Johnson</a>.</p>
+  <a href="http://rubyforge.org/projects/ape">ape.rubyforge.org</a>.
 
   <hr/>
   <p>Ape Logo by <a href="http://www.urbanhonking.com/ideasfordozens">Greg
